<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bgapps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/password"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:background="@drawable/button_bg"
        android:text="Login"
        android:textColor="#FBFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.127" />

    <!--<Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/assistant_regular"
        android:onClick="login"
        android:text="Login"
        android:textColor="#FFFFFF" />-->

    <TextView
        android:id="@+id/guestbutton"
        android:layout_width="243dp"
        android:layout_height="25dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:text="@string/click_here_to_continue_as_guest"
        android:textColor="#2C363E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="194dp"
        android:text="@string/first_time_register_here"
        android:textColor="#2C363E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>